Push from fixtemplate

--- a/Search/doc/doc.mdx
+++ b/Search/doc/doc.mdx
@@ -4,6 +4,24 @@ export default Layout;
 
 # 1
 
-Test
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a nulla eu ex scelerisque tincidunt. Nulla facilisi. Maecenas vitae lorem rutrum augue convallis semper eget efficitur lectus. Ut nec sem magna. Phasellus ac nulla commodo, ullamcorper sapien vitae, dapibus augue. Sed commodo efficitur eros vel luctus. Pellentesque efficitur ex non congue accumsan. Nunc mollis sagittis ultrices. Duis sed consequat nisi, sed varius enim. Nunc auctor, sem sed porttitor mattis, odio orci suscipit massa, eget lacinia risus purus non nisi. Sed varius dapibus odio varius interdum. Vestibulum magna nunc, ultricies ut ex in, imperdiet lobortis nisl. Nulla facilisi. Donec elementum ipsum vel luctus maximus. Sed eu pellentesque velit, in semper velit.
 
-A
+<button>A</button>
+
+### Changing row and column gaps independently
+
+Use gap-x-\{size\} and gap-y-\{size\} to change the gap between rows and columns independently.
+
+Mauris eget bibendum urna, eget varius leo. Integer molestie sed velit et consectetur.
+Phasellus et nulla vel nulla placerat mattis. Nunc ornare sapien quis placerat tempus.
+Proin tempus viverra rhoncus. Cras vulputate congue eros fringilla fermentum. Morbi
+bibendum egestas diam, sed interdum nulla venenatis eget. Aenean ornare sagittis
+quam, at tempus risus. Nulla aliquet mauris id augue tempus, vel aliquam nisi viverra.
+Donec elementum quis turpis eget tincidunt. Fusce purus ante, sollicitudin in porttitor
+id, mollis mollis arcu.
+
+Pellentesque tincidunt ligula ac justo commodo dictum at non odio. Nullam massa nisl, tempor ac tristique in, mollis vitae ex. Praesent nunc est, fringilla ac commodo id, dapibus a nunc. Sed et velit pharetra, vehicula quam mattis, iaculis augue. Curabitur vitae mauris vitae nibh vulputate posuere. Praesent viverra rutrum ante, a fermentum velit ullamcorper nec. Maecenas lobortis urna sit amet nibh volutpat luctus. Quisque ac pulvinar massa, nec fringilla tortor. Integer placerat ipsum metus. Nullam est orci, eleifend ut nisi sed, luctus vehicula tortor. Aliquam velit libero, facilisis dictum ultricies nec, molestie non nunc. Proin ultricies porttitor malesuada.
+
+Curabitur eget auctor ipsum. Sed in lorem non urna faucibus aliquet ac a tortor. Vestibulum eu dolor condimentum, dignissim purus vitae, vestibulum est. Proin bibendum odio sed nibh venenatis, a molestie odio bibendum. Proin laoreet magna nec neque vulputate, rhoncus tempus nibh bibendum. Nam id mauris gravida, varius dui blandit, vulputate lorem. Nullam tincidunt nunc condimentum erat consectetur imperdiet. Proin non odio enim. In sollicitudin semper cursus.
+
+<h1>Test</h1>
